--- a/daniel.html
+++ b/daniel.html
@@ -14,17 +14,15 @@
   </head>
   <body>
 
+    <header>
+      <!--Navigation bar-->
+      <div id="nav-placeholder"></div> 
+      <!--end of Navigation bar-->      
+    </header>
+
     <main>
 
-      <nav>
-        <a href="cuarto.html">primera</a>
-        <a href="segundo.html">segundo</a>
-        <a href="tercera.html">tercera</a>
-    
-    
-    </nav>
-
-
+  
       <main>
         <div class="bloque__principal  container">
             <div class="row">
@@ -47,5 +45,8 @@
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="script.js"> </script>
+ 
   </body>
 </html>
