--- a/jorge.html
+++ b/jorge.html
@@ -67,12 +67,8 @@
 </div>
 
 <footer>
-    <div class="footer__black">
-
-    </div>
-    <div class="footer__text">
-        <p class="footer__text--text">Todos los derechos reservados</p>
-    </div>
+  <h3>Wedding - 2022</h3>
+ <p> Gianina | Daniel | Nicole | Jorge </p>
 </footer>
 
 
