--- a/daniel.html
+++ b/daniel.html
@@ -41,6 +41,10 @@
       </div>
     </main>
 
+    <footer>
+      <h3>Wedding - 2022</h3>
+     <p> Gianina | Daniel | Nicole | Jorge </p>
+    </footer>
  
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
