--- a/gianina.html
+++ b/gianina.html
@@ -57,8 +57,14 @@
     </div>
 
     <div class="color_blanco_2"></div>
+<br>
+<br>
+<br>
 
-
+    <footer>
+        <h3>Wedding - 2022</h3>
+       <p> Gianina | Daniel | Nicole | Jorge </p>
+    </footer>
 
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
