--- a/gianina.html
+++ b/gianina.html
@@ -22,13 +22,13 @@
         <!--end of Navigation bar-->      
       </header>
 
-    <div class="color_blanco_1">
+    <div class="section2__background--color1">
         <br>
         <br>
-        <div class="idem">
-            <div class="idem__tabla">
-                <tr><h2 class="idem__h2">MEMORIAS.</h2></tr>
-                <tr><p class="idem__p">Sólo ustedes. Su historia, su día, su amor y su alegría.
+        <div class="section3">
+            <div class="#">
+                <tr><h2 class="section3__h2">MEMORIAS.</h2></tr>
+                <tr><p class="section3__parrafo">Sólo ustedes. Su historia, su día, su amor y su alegría.
                     Sin endulzar, sin plastificar, sin falsificar. Sin interferir, sin posar. 
                     Sólo narrando su día. Tal y como son.</p></tr>
                 <tr><img src="https://images.pexels.com/photos/6023737/pexels-photo-6023737.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" 
@@ -38,9 +38,9 @@
         </div>
     </div>
 
-    <div class="color_gris_1"></div>
+    <div class="section2__background--color2"></div>
 
-    <div class="color_gris_2">
+    <div class="section2__background--color3">
         <br>
         <br>
         <br>
@@ -49,14 +49,14 @@
             <img src="https://images.pexels.com/photos/1488312/pexels-photo-1488312.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" 
             width="650px">
         </div>
-        <div class="comentario">
-            <tr><h5 class="comentario__h5">CONTÁCTANOS</h5></tr>
-                <tr><p><h2 class="comentario__h2">¿Quieres que las fotografías de tu boda sean diferentes, originales, únicas y que reflejen tu personalidad al 200%?</h2></p></tr>
-                <tr><button class="comentario__button">Contacto</button></tr>
+        <div class="section4">
+            <tr><h5 class="section4__texto--titulo">CONTÁCTANOS</h5></tr>
+                <tr><p><h2 class="section4__texto--parrafo">¿Quieres que las fotografías de tu boda sean diferentes, originales, únicas y que reflejen tu personalidad al 200%?</h2></p></tr>
+                <tr><button class="section4__button">Contacto</button></tr>
         </div>            
     </div>
 
-    <div class="color_blanco_2"></div>
+    <div class="section2__background--color4"></div>
 <br>
 <br>
 <br>
