--- a/jorge.html
+++ b/jorge.html
@@ -18,10 +18,9 @@
     <!--Navigation bar-->
     <div id="nav-placeholder"></div> 
     <!--end of Navigation bar-->      
-  </header>
+    </header>
 
-
-<div class="container5">
+    <div class="container5">
     <div class="row">
         <div class="container5__top">
 
@@ -32,13 +31,12 @@
                 <h2> Te amo </h2>
                 <p>Hoy, mañana y para siempre</p>
             </div>
-
         </div>
 
         <div class="container5__mid1">
             <div class="mid1--imagen">
             </div>
-            <div class="mid--texto">
+            <div class="#">
                 <p>cont1  ipsum dolor sit amet consectetur adipisicing elit. Provident optio autem nobis perspiciatis
                 reiciendis! Labore illum quod voluptate tas!</p>
             </div>
@@ -47,7 +45,7 @@
         <div class="container5__mid2">
             <div class="mid2--imagen">
             </div>
-            <div class="mid2-container5--texto">
+            <div class="#">
                 <p>cont2 ipsum dolor sit amet consectetur adipisicing elit. Provident optio autem nobis perspiciatis
                 reiciendis! Labore illum quod voluptate tas!</p>
                 <button class="mid2--btn">Leer más</button>
